# edicat

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: ci.yml
edicat/: __init__.py  __main__.py  cli.py  edi.py
src/: edi.rs  lib.rs  main.rs
tests/: edifact_test.py  edix12_test.py  integration_tests.rs  test_edifact.py  test_edix12.py
