[project]
name = "edicat"
description = "Print and concatenate EDI files"
authors = [{ name = "Peter Tripp", email = "peter.tripp@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.7"
dynamic = ["version"]
license = "MIT"
keywords = ["edi", "edicat", "edifact", "ansix12"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/notpeter/edicat"
Repository = "https://github.com/notpeter/edicat.git"

[project.optional-dependencies]
dev = ["black", "flake8"]

[project.scripts]
edicat = "edicat.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "edicat/__init__.py"

[tool.black]
line-length = 100
